--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,37 +12,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout source
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Auth to GCP using Service Account Key in GitHub Secret
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
-      # 3. Configure Docker client to use gcloud auth
-      - name: Configure Docker to use gcloud
+      - name: Configure Docker for Artifact Registry
         run: |
           gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
 
-      # 4. Build Docker image using your Dockerfile
       - name: Build Docker image
-        run: |
-          docker build -t petclinic .
+        run: docker build -t petclinic .
 
-      # 5. Tag Docker image with Git commit SHA
-        # example: europe-west1-docker.pkg.dev/petclinic-478815/petclinic/petclinic:abc123
-      - name: Tag image with commit SHA
+      - name: Tag image
         run: |
           IMAGE_URI="europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/petclinic/petclinic:${{ github.sha }}"
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
-          docker tag petclinic $IMAGE_URI
+          docker tag petclinic "$IMAGE_URI"
 
-      # 6. Push image to Artifact Registry
-      - name: Push image
-        run: |
-          docker push "$IMAGE_URI"
+      - name: Push image to Artifact Registry
+        run: docker push "$IMAGE_URI"
