--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,71 @@
-name: CI - Build and Push Petclinic Image
+name: Build, Push, and Deploy Petclinic to Cloud Run
 
 on:
   push:
-    branches:
-      - main
-      - dev
-      - staging
+    branches: [ "main" ]   # push main 自动部署
+
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  REGION_EU: europe-west1
+  REGION_US: us-central1
+  REPO_NAME: petclinic
+  IMAGE_NAME: petclinic
+  SERVICE_NAME_EU: petclinic-eu
+  SERVICE_NAME_US: petclinic-us
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+    - name: Authenticate to GCP
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up gcloud
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+    - name: Setup gcloud
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Configure Docker for Artifact Registry
-        run: |
-          gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
+    - name: Configure Docker for Artifact Registry
+      run: |
+        gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
+    
+    - name: Build Docker image
+      run: |
+        docker build -t europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest .
 
-      - name: Build Docker image
-        run: docker build -t petclinic .
+    - name: Push Docker image
+      run: |
+        docker push europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest
 
-      - name: Tag image (SHA + latest)
-        run: |
-          PROJECT_ID="${{ secrets.GCP_PROJECT_ID }}"
-          SHA_IMAGE="europe-west1-docker.pkg.dev/$PROJECT_ID/petclinic/petclinic:${{ github.sha }}"
-          LATEST_IMAGE="europe-west1-docker.pkg.dev/$PROJECT_ID/petclinic/petclinic:latest"
 
-          echo "SHA_IMAGE=$SHA_IMAGE" >> $GITHUB_ENV
-          echo "LATEST_IMAGE=$LATEST_IMAGE" >> $GITHUB_ENV
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push  # 等 build 完再 deploy
 
-          docker tag petclinic "$SHA_IMAGE"
-          docker tag petclinic "$LATEST_IMAGE"
-          
-      - name: Push images to Artifact Registry
-        run: |
-          docker push "$SHA_IMAGE"
-          docker push "$LATEST_IMAGE"
+    steps:
+    - name: Authenticate to GCP
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set outputs for CD
-        id: output
-        run: |
-          echo "sha_image=$SHA_IMAGE" >> $GITHUB_OUTPUT
-          echo "latest_image=$LATEST_IMAGE" >> $GITHUB_OUTPUT
+    - name: Deploy EU Cloud Run
+      run: |
+        gcloud run deploy $SERVICE_NAME_EU \
+          --image europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest \
+          --region $REGION_EU \
+          --platform managed \
+          --allow-unauthenticated
+
+    - name: Deploy US Cloud Run
+      run: |
+        gcloud run deploy $SERVICE_NAME_US \
+          --image europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest \
+          --region $REGION_US \
+          --platform managed \
+          --allow-unauthenticated
