--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Build, Push, and Deploy Petclinic to Cloud Run
 
 on:
   push:
-    branches: [ "main" ]   # push main 自动部署
+    branches: [ "main" ]
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
@@ -10,6 +10,7 @@ env:
   REGION_US: us-central1
   REPO_NAME: petclinic
   IMAGE_NAME: petclinic
+  BUCKET_ARTIFACTS: petclinic-cd
   SERVICE_NAME_EU: petclinic-eu
   SERVICE_NAME_US: petclinic-us
 
@@ -34,19 +35,26 @@ jobs:
     - name: Configure Docker for Artifact Registry
       run: |
         gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
-    
+
     - name: Build Docker image
       run: |
-        docker build -t europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest .
+        IMAGE_URI="europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:${GITHUB_SHA}"
+        echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+        docker build -t $IMAGE_URI .
 
     - name: Push Docker image
       run: |
-        docker push europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest
+        docker push "$IMAGE_URI"
+
+    - name: Upload latest image tag to GCS
+      run: |
+        echo "$IMAGE_URI" > latest-image.txt
+        gsutil cp latest-image.txt gs://${BUCKET_ARTIFACTS}/latest-image.txt
 
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push  # 等 build 完再 deploy
+    needs: build-and-push
 
     steps:
     - name: Authenticate to GCP
@@ -57,7 +65,7 @@ jobs:
     - name: Deploy EU Cloud Run
       run: |
         gcloud run deploy $SERVICE_NAME_EU \
-          --image europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest \
+          --image "$IMAGE_URI" \
           --region $REGION_EU \
           --platform managed \
           --allow-unauthenticated
@@ -65,7 +73,7 @@ jobs:
     - name: Deploy US Cloud Run
       run: |
         gcloud run deploy $SERVICE_NAME_US \
-          --image europe-west1-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/${IMAGE_NAME}:latest \
+          --image "$IMAGE_URI" \
           --region $REGION_US \
           --platform managed \
           --allow-unauthenticated
