--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,29 @@
-# database init, supports mysql too
-database=h2
-spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
-spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
-# Web
-spring.thymeleaf.mode=HTML
+spring.datasource.url=jdbc:postgresql://localhost/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
-# JPA
+# Cloud SQL Connector
+spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
+spring.datasource.hikari.data-source-properties.cloudSqlInstance=${DB_CONNECTION_NAME}
+spring.datasource.hikari.data-source-properties.enableIamAuth=false
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
-# Internationalization
-spring.messages.basename=messages/messages
 
-# Actuator
+database=postgresql
+spring.sql.init.schema-locations=classpath*:db/postgresql/schema.sql
+spring.sql.init.data-locations=classpath*:db/postgresql/data.sql
+
+spring.thymeleaf.mode=HTML
+
 management.endpoints.web.exposure.include=*
 
-# Logging
 logging.level.org.springframework=INFO
-# logging.level.org.springframework.web=DEBUG
-# logging.level.org.springframework.context.annotation=TRACE
 
-# Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
