--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,41 @@
+###############################################
+# PostgreSQL via Private IP (NO SocketFactory)
+###############################################
 
-spring.datasource.url=jdbc:postgresql://localhost/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-# Cloud SQL Connector
-spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
-spring.datasource.hikari.data-source-properties.cloudSqlInstance=${DB_CONNECTION_NAME}
-spring.datasource.hikari.data-source-properties.enableIamAuth=false
-
+# HikariCP settings
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
 
+###############################################
+# Disable all Google Cloud auto-configurations
+###############################################
+spring.cloud.gcp.enabled=false
+spring.autoconfigure.exclude=\
+  org.springframework.cloud.gcp.autoconfigure.core.GcpContextAutoConfiguration,\
+  org.springframework.cloud.gcp.autoconfigure.sql.GcpCloudSqlAutoConfiguration
 
+###############################################
+# JPA Settings
+###############################################
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
-
+###############################################
+# Database schema + data init
+###############################################
 database=postgresql
 spring.sql.init.schema-locations=classpath*:db/postgresql/schema.sql
 spring.sql.init.data-locations=classpath*:db/postgresql/data.sql
 
+###############################################
+# Thymeleaf / Actuator / Logging
+###############################################
 spring.thymeleaf.mode=HTML
-
 management.endpoints.web.exposure.include=*
-
 logging.level.org.springframework=INFO
 
 spring.web.resources.cache.cachecontrol.max-age=12h
