--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.open-in-view=false
 database=postgresql
 spring.sql.init.schema-locations=classpath*:db/postgresql/schema.sql
 spring.sql.init.data-locations=classpath*:db/postgresql/data.sql
-
+spring.messages.basename=messages/messages
 ###############################################
 # Thymeleaf / Actuator / Logging
 ###############################################
