--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,8 @@ spring.jpa.open-in-view=false
 # Database schema + data init
 ###############################################
 database=postgresql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 spring.sql.init.schema-locations=classpath*:db/postgresql/schema.sql
 spring.sql.init.data-locations=classpath*:db/postgresql/data.sql
 spring.messages.basename=messages/messages
