--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,19 @@
 # PostgreSQL via Private IP (NO SocketFactory)
 ###############################################
 
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-# HikariCP settings
+# Connection Pool
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=3000
+spring.datasource.hikari.validation-timeout=3000
 
 ###############################################
-# Disable all Google Cloud auto-configurations
+# Disable Google Cloud?s default auto configs
 ###############################################
 spring.cloud.gcp.enabled=false
 spring.autoconfigure.exclude=\
@@ -19,20 +22,22 @@ spring.autoconfigure.exclude=\
   org.springframework.cloud.gcp.autoconfigure.sql.GcpCloudSqlAutoConfiguration
 
 ###############################################
-# JPA Settings
+# JPA Settings (NO AUTO CREATE)
 ###############################################
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
+spring.jpa.database=postgresql
 
 ###############################################
-# Database schema + data init
+# Ensure schema.sql & data.sql ALWAYS run
 ###############################################
-database=postgresql
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.schema-locations=classpath*:db/postgresql/schema.sql
-spring.sql.init.data-locations=classpath*:db/postgresql/data.sql
-spring.messages.basename=messages/messages
+spring.sql.init.continue-on-error=false
+spring.sql.init.platform=postgresql
+spring.sql.init.schema-locations=classpath:db/postgresql/schema.sql
+spring.sql.init.data-locations=classpath:db/postgresql/data.sql
+
 ###############################################
 # Thymeleaf / Actuator / Logging
 ###############################################
@@ -40,4 +45,7 @@ spring.thymeleaf.mode=HTML
 management.endpoints.web.exposure.include=*
 logging.level.org.springframework=INFO
 
+###############################################
+# Static resource caching
+###############################################
 spring.web.resources.cache.cachecontrol.max-age=12h
