--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,8 +35,8 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.continue-on-error=false
 spring.sql.init.platform=postgresql
-spring.sql.init.schema-locations=classpath:db/postgresql/schema.sql
-spring.sql.init.data-locations=classpath:db/postgresql/data.sql
+spring.sql.init.schema-locations=classpath:db/postgres/schema.sql
+spring.sql.init.data-locations=classpath:db/postgres/data.sql
 
 ###############################################
 # Thymeleaf / Actuator / Logging
