Add environment variable for Cloud Run deployments

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
             --region $REGION_EU \
             --platform managed \
             --allow-unauthenticated
+            --set-env-vars SPRING_PROFILES_ACTIVE=eu
 
       - name: Deploy US Cloud Run
         run: |
@@ -86,3 +87,4 @@ jobs:
             --region $REGION_US \
             --platform managed \
             --allow-unauthenticated
+            --set-env-vars SPRING_PROFILES_ACTIVE=us
