--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,51 +1,14 @@
 ###############################################
-# PostgreSQL via Private IP (NO SocketFactory)
+# COMMON BASE CONFIG (NO DB CONFIG HERE)
 ###############################################
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
 
-# Connection Pool
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=3000
-spring.datasource.hikari.validation-timeout=3000
-
-###############################################
-# Disable Google Cloud?s default auto configs
-###############################################
-spring.cloud.gcp.enabled=false
-spring.autoconfigure.exclude=\
-  org.springframework.cloud.gcp.autoconfigure.core.GcpContextAutoConfiguration,\
-  org.springframework.cloud.gcp.autoconfigure.sql.GcpCloudSqlAutoConfiguration
-
-###############################################
-# JPA Settings (NO AUTO CREATE)
-###############################################
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
-spring.jpa.database=postgresql
 
-###############################################
-# Ensure schema.sql & data.sql ALWAYS run
-###############################################
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.continue-on-error=false
-spring.sql.init.platform=postgresql
-spring.sql.init.schema-locations=classpath:db/postgres/schema.sql
-spring.sql.init.data-locations=classpath:db/postgres/data.sql
-
-###############################################
-# Thymeleaf / Actuator / Logging
-###############################################
 spring.thymeleaf.mode=HTML
 management.endpoints.web.exposure.include=*
 logging.level.org.springframework=INFO
 
-###############################################
-# Static resource caching
-###############################################
 spring.web.resources.cache.cachecontrol.max-age=12h
