--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
             --image "$IMAGE_URI" \
             --region $REGION_EU \
             --platform managed \
-            --allow-unauthenticated
+            --allow-unauthenticated \
             --set-env-vars SPRING_PROFILES_ACTIVE=eu
 
       - name: Deploy US Cloud Run
@@ -86,5 +86,5 @@ jobs:
             --image "$IMAGE_URI" \
             --region $REGION_US \
             --platform managed \
-            --allow-unauthenticated
+            --allow-unauthenticated \
             --set-env-vars SPRING_PROFILES_ACTIVE=us
