--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,8 @@ jobs:
             --region $REGION_EU \
             --platform managed \
             --allow-unauthenticated \
-            --set-env-vars=SPRING_PROFILES_ACTIVE=eu,DB_HOST=${{ secrets.DB_HOST_EU }},DB_USER=${{ secrets.DB_USER }},DB_PASSWORD=${{ secrets.DB_PASSWORD }},DB_NAME=${{ secrets.DB_NAME }}
+            --set-env-vars SPRING_PROFILES_ACTIVE=eu,DB_HOST="${{ secrets.DB_HOST_EU }}",DB_USER="${{ secrets.DB_USER }}",DB_PASSWORD="${{ secrets.DB_PASSWORD }}",DB_NAME="${{ secrets.DB_NAME }}"
+
       - name: Deploy US Cloud Run
         run: |
           gcloud run deploy $SERVICE_NAME_US \
@@ -86,4 +87,4 @@ jobs:
             --region $REGION_US \
             --platform managed \
             --allow-unauthenticated \
-            --set-env-vars=SPRING_PROFILES_ACTIVE=us,DB_HOST=${{ secrets.DB_HOST_US }},DB_USER=${{ secrets.DB_USER }},DB_PASSWORD=${{ secrets.DB_PASSWORD }},DB_NAME=${{ secrets.DB_NAME }}
+            --set-env-vars SPRING_PROFILES_ACTIVE=us,DB_HOST="${{ secrets.DB_HOST_US }}",DB_USER="${{ secrets.DB_USER }}",DB_PASSWORD="${{ secrets.DB_PASSWORD }}",DB_NAME="${{ secrets.DB_NAME }}"
