--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ management.endpoints.web.exposure.include=*
 logging.level.org.springframework=INFO
 
 spring.web.resources.cache.cachecontrol.max-age=12h
+spring.messages.basename=messages/messages
