--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-          token_format: "google_cloud"
+          create_credentials_file: true
           export_environment_variables: true
 
       - name: Download IMAGE_URI artifact
