--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build, Push and Deploy Petclinic
+name: Build, Push and Deploy Petclinic (GKE Multi-Cluster)
 
 on:
   push:
@@ -10,9 +10,9 @@ env:
   REGION_US: us-central1
   REPO_NAME: petclinic
   IMAGE_NAME: petclinic
-  SERVICE_NAME_EU: petclinic-eu
-  SERVICE_NAME_US: petclinic-us
   ARTIFACT_BUCKET: petclinic-ci-artifacts
+  CLUSTER_EU: petclinic-eu
+  CLUSTER_US: petclinic-us
 
 jobs:
   build-and-push:
@@ -22,9 +22,6 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      # --------------------
-      # Authenticate to GCP
-      # --------------------
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -35,9 +32,6 @@ jobs:
         with:
           project_id: ${{ env.PROJECT_ID }}
 
-      # --------------------
-      # Build Docker Image
-      # --------------------
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
 
@@ -62,9 +56,6 @@ jobs:
     needs: build-and-push
 
     steps:
-      # --------------------
-      # Authenticate again (new job)
-      # --------------------
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -75,9 +66,7 @@ jobs:
         with:
           project_id: ${{ env.PROJECT_ID }}
 
-      # --------------------
-      # Load IMAGE_URI artifact
-      # --------------------
+      ## Load image URI
       - name: Download IMAGE_URI artifact
         uses: actions/download-artifact@v4
         with:
@@ -88,42 +77,37 @@ jobs:
           IMAGE_URI=$(cat image_uri.txt)
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
-      # --------------------
-      # Upload latest-image.txt to GCS
-      # (Now fully fixed & working)
-      # --------------------
+      ## Upload artifact to GCS for Terraform usage if needed
       - name: Upload latest image URI to GCS
         run: |
           gsutil cp image_uri.txt gs://${{ env.ARTIFACT_BUCKET }}/latest-image.txt
 
-      # --------------------
-      # Deploy EU Cloud Run
-      # --------------------
-      - name: Deploy EU Cloud Run
+      # ------------------------------
+      # Deploy to GKE EU CLUSTER
+      # ------------------------------
+      - name: Set EU cluster credentials
         run: |
-          gcloud run deploy $SERVICE_NAME_EU \
-            --image "$IMAGE_URI" \
+          gcloud container clusters get-credentials $CLUSTER_EU \
             --region $REGION_EU \
-            --platform managed \
-            --allow-unauthenticated \
-            --set-env-vars SPRING_PROFILES_ACTIVE=eu \
-            --set-env-vars DB_HOST=${{ secrets.DB_HOST_EU }} \
-            --set-env-vars DB_USER=${{ secrets.DB_USER }} \
-            --set-env-vars DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-            --set-env-vars DB_NAME=${{ secrets.DB_NAME }}
+            --project $PROJECT_ID
 
-      # --------------------
-      # Deploy US Cloud Run
-      # --------------------
-      - name: Deploy US Cloud Run
+      - name: Apply EU deployment
         run: |
-          gcloud run deploy $SERVICE_NAME_US \
-            --image "$IMAGE_URI" \
+          kubectl set image deployment/petclinic petclinic-container=$IMAGE_URI \
+            --namespace default || \
+          kubectl apply -f k8s/deployment-eu.yaml
+
+      # ------------------------------
+      # Deploy to GKE US CLUSTER
+      # ------------------------------
+      - name: Set US cluster credentials
+        run: |
+          gcloud container clusters get-credentials $CLUSTER_US \
             --region $REGION_US \
-            --platform managed \
-            --allow-unauthenticated \
-            --set-env-vars SPRING_PROFILES_ACTIVE=us \
-            --set-env-vars DB_HOST=${{ secrets.DB_HOST_US }} \
-            --set-env-vars DB_USER=${{ secrets.DB_USER }} \
-            --set-env-vars DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-            --set-env-vars DB_NAME=${{ secrets.DB_NAME }}
+            --project $PROJECT_ID
+
+      - name: Apply US deployment
+        run: |
+          kubectl set image deployment/petclinic petclinic-container=$IMAGE_URI \
+            --namespace default || \
+          kubectl apply -f k8s/deployment-us.yaml
