--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
 
+    env:
+      USE_GKE_GCLOUD_AUTH_PLUGIN: "True"
+
     steps:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
@@ -65,11 +68,13 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.PROJECT_ID }}
-      - name: Install gke-gcloud-auth-plugin
+          install_components: gke-gcloud-auth-plugin
+
+      - name: Verify GKE Auth Plugin
         run: |
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-      ## Load image URI
+          gcloud version
+          gke-gcloud-auth-plugin --version
+          
       - name: Download IMAGE_URI artifact
         uses: actions/download-artifact@v4
         with:
