--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,10 +55,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
 
-    env:
-      USE_GKE_GCLOUD_AUTH_PLUGIN: "True"
-
     steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -70,11 +70,11 @@ jobs:
           project_id: ${{ env.PROJECT_ID }}
           install_components: gke-gcloud-auth-plugin
 
-      - name: Verify GKE Auth Plugin
+      - name: Enable GKE auth plugin
         run: |
-          gcloud version
-          gke-gcloud-auth-plugin --version
-          
+          echo "export USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
+          echo "export KUBECONFIG=/home/runner/.kube/config" >> $GITHUB_ENV
+
       - name: Download IMAGE_URI artifact
         uses: actions/download-artifact@v4
         with:
@@ -85,14 +85,12 @@ jobs:
           IMAGE_URI=$(cat image_uri.txt)
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
-      ## Upload artifact to GCS for Terraform usage if needed
+      # Upload image to GCS (optional)
       - name: Upload latest image URI to GCS
         run: |
           gsutil cp image_uri.txt gs://${{ env.ARTIFACT_BUCKET }}/latest-image.txt
 
-      # ------------------------------
-      # Deploy to GKE EU CLUSTER
-      # ------------------------------
+      # Deploy EU cluster
       - name: Set EU cluster credentials
         run: |
           gcloud container clusters get-credentials $CLUSTER_EU \
@@ -101,13 +99,10 @@ jobs:
 
       - name: Apply EU deployment
         run: |
-          kubectl set image deployment/petclinic petclinic-container=$IMAGE_URI \
-            --namespace default || \
           kubectl apply -f k8s/deployment-eu.yaml
+          kubectl set image deployment/petclinic petclinic-container=$IMAGE_URI --namespace default
 
-      # ------------------------------
-      # Deploy to GKE US CLUSTER
-      # ------------------------------
+      # Deploy US cluster
       - name: Set US cluster credentials
         run: |
           gcloud container clusters get-credentials $CLUSTER_US \
@@ -116,6 +111,5 @@ jobs:
 
       - name: Apply US deployment
         run: |
-          kubectl set image deployment/petclinic petclinic-container=$IMAGE_URI \
-            --namespace default || \
           kubectl apply -f k8s/deployment-us.yaml
+          kubectl set image deployment/petclinic petclinic-container=$IMAGE_URI --namespace default
