--- a/k8s/secretproviderclass-us.yaml
+++ b/k8s/secretproviderclass-us.yaml
@@ -6,11 +6,15 @@ spec:
   provider: gcp
   parameters:
     secrets:
-      - resourceName: "projects/petclinic-479121/secrets/petclinic-db-host-us/versions/latest"
-        fileName: "host"
-      - resourceName: "projects/petclinic-479121/secrets/petclinic-db-user/versions/latest"
-        fileName: "user"
-      - resourceName: "projects/petclinic-479121/secrets/petclinic-db-password/versions/latest"
-        fileName: "password"
-      - resourceName: "projects/petclinic-479121/secrets/petclinic-db-name/versions/latest"
-        fileName: "dbname"
+      - version: latest
+        projectId: petclinic-479121
+        secret: petclinic-db-host-us
+      - version: latest
+        projectId: petclinic-479121
+        secret: petclinic-db-user
+      - version: latest
+        projectId: petclinic-479121
+        secret: petclinic-db-password
+      - version: latest
+        projectId: petclinic-479121
+        secret: petclinic-db-name
