Change secret manager

--- a/k8s/secretproviderclass-eu.yaml
+++ b/k8s/secretproviderclass-eu.yaml
@@ -7,14 +7,14 @@ spec:
   parameters:
     secrets:
       - version: latest
-        projectId: petclinic-479121
+        projectId: petclinic-cloud
         secret: petclinic-db-host-eu
       - version: latest
-        projectId: petclinic-479121
+        projectId: petclinic-cloud
         secret: petclinic-db-user
       - version: latest
-        projectId: petclinic-479121
+        projectId: petclinic-cloud
         secret: petclinic-db-password
       - version: latest
-        projectId: petclinic-479121
+        projectId: petclinic-cloud
         secret: petclinic-db-name
