new secret config

--- a/k8s/secretproviderclass-us.yaml
+++ b/k8s/secretproviderclass-us.yaml
@@ -1,20 +1,16 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: petclinic-secrets
+  name: petclinic-secrets-us
 spec:
   provider: gcp
   parameters:
-    secrets:
-      - version: latest
-        projectId: petclinic-cloud
-        secret: petclinic-db-host-us
-      - version: latest
-        projectId: petclinic-cloud
-        secret: petclinic-db-user
-      - version: latest
-        projectId: petclinic-cloud
-        secret: petclinic-db-password
-      - version: latest
-        projectId: petclinic-cloud
-        secret: petclinic-db-name
+    resources:
+      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-host-us/versions/latest"
+        fileName: "host"
+      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-user/versions/latest"
+        fileName: "user"
+      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-password/versions/latest"
+        fileName: "password"
+      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-name/versions/latest"
+        fileName: "dbname"
