--- a/k8s/secretproviderclass-eu.yaml
+++ b/k8s/secretproviderclass-eu.yaml
@@ -5,12 +5,22 @@ metadata:
 spec:
   provider: gcp
   parameters:
-    resources:
-      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-host-eu/versions/latest"
-        fileName: "host"
-      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-user/versions/latest"
-        fileName: "user"
-      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-password/versions/latest"
-        fileName: "password"
-      - resourceName: "projects/petclinic-cloud/secrets/petclinic-db-name/versions/latest"
-        fileName: "dbname"
+    secrets: |
+      [
+        {
+          "resourceName": "projects/petclinic-cloud/secrets/petclinic-db-host-eu/versions/latest",
+          "fileName": "host"
+        },
+        {
+          "resourceName": "projects/petclinic-cloud/secrets/petclinic-db-user/versions/latest",
+          "fileName": "user"
+        },
+        {
+          "resourceName": "projects/petclinic-cloud/secrets/petclinic-db-password/versions/latest",
+          "fileName": "password"
+        },
+        {
+          "resourceName": "projects/petclinic-cloud/secrets/petclinic-db-name/versions/latest",
+          "fileName": "dbname"
+        }
+      ]
