--- a/k8s/deployment-eu.yaml
+++ b/k8s/deployment-eu.yaml
@@ -48,4 +48,4 @@ spec:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
-              secretProviderClass: "petclinic-secrets"
+              secretProviderClass: "petclinic-secrets-eu"
