--- a/k8s/deployment-eu.yaml
+++ b/k8s/deployment-eu.yaml
@@ -14,8 +14,6 @@ spec:
       labels:
         app: petclinic
     spec:
-
-      # 必须指定 SA 才能访问 Secret Manager
       serviceAccountName: petclinic-app
 
       containers:
@@ -24,18 +22,33 @@ spec:
           ports:
             - containerPort: 8080
 
-          # 使用 CSI 挂载的文件
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "eu"
-            - name: DB_HOST_FILE
-              value: "/secrets/host"
-            - name: DB_USER_FILE
-              value: "/secrets/user"
-            - name: DB_PASSWORD_FILE
-              value: "/secrets/password"
-            - name: DB_NAME_FILE
-              value: "/secrets/dbname"
+
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: petclinic-db-secrets-eu
+                  key: DB_HOST
+
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: petclinic-db-secrets-eu
+                  key: DB_USER
+
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: petclinic-db-secrets-eu
+                  key: DB_PASSWORD
+
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: petclinic-db-secrets-eu
+                  key: DB_NAME
 
           volumeMounts:
             - name: db-secrets
