--- a/k8s/secretproviderclass-us.yaml
+++ b/k8s/secretproviderclass-us.yaml
@@ -24,3 +24,16 @@ spec:
           "fileName": "dbname"
         }
       ]
+
+  secretObjects:
+    - secretName: petclinic-db-secrets-us
+      type: Opaque
+      data:
+        - objectName: host
+          key: DB_HOST
+        - objectName: user
+          key: DB_USER
+        - objectName: password
+          key: DB_PASSWORD
+        - objectName: dbname
+          key: DB_NAME
