fix naming issue

--- a/k8s/secretproviderclass-eu.yaml
+++ b/k8s/secretproviderclass-eu.yaml
@@ -25,7 +25,7 @@ spec:
         }
       ]
   secretObjects:
-    - secretName: petclinic-db-secrets
+    - secretName: petclinic-db-secrets-eu
       type: Opaque
       data:
         - objectName: host
