--- a/k8s/deployment-eu.yaml
+++ b/k8s/deployment-eu.yaml
@@ -26,29 +26,14 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: "eu"
 
-            - name: DB_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: petclinic-db-secrets-eu
-                  key: DB_HOST
-
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: petclinic-db-secrets-eu
-                  key: DB_USER
-
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: petclinic-db-secrets-eu
-                  key: DB_PASSWORD
-
-            - name: DB_NAME
-              valueFrom:
-                secretKeyRef:
-                  name: petclinic-db-secrets-eu
-                  key: DB_NAME
+            - name: DB_HOST_FILE
+              value: "/secrets/host"
+            - name: DB_USER_FILE
+              value: "/secrets/user"
+            - name: DB_PASSWORD_FILE
+              value: "/secrets/password"
+            - name: DB_NAME_FILE
+              value: "/secrets/dbname"
 
           volumeMounts:
             - name: db-secrets
