--- a/k8s/deployment-eu.yaml
+++ b/k8s/deployment-eu.yaml
@@ -18,7 +18,7 @@ spec:
 
       containers:
         - name: petclinic-container
-          image: nginx
+          image: europe-west1-docker.pkg.dev/petclinic-cloud/petclinic/petclinic:latest
           ports:
             - containerPort: 8080
 
