--- a/k8s/deployment-us.yaml
+++ b/k8s/deployment-us.yaml
@@ -49,4 +49,4 @@ spec:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
-              secretProviderClass: "petclinic-secrets-eu"
+              secretProviderClass: "petclinic-secrets-us"
